--- a/samples/android/AdsSample/app/src/main/res/layout/native_ad_layout.xml
+++ b/samples/android/AdsSample/app/src/main/res/layout/native_ad_layout.xml
@@ -1,113 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/native_ad_unit"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:background="@android:color/white"
-              android:orientation="vertical"
-              android:paddingLeft="10dp"
-              android:paddingRight="10dp">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ad_parent"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@android:color/black"
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/ll_header"
+    <ImageView
+        android:id="@+id/iv_fb_ad_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingBottom="10dp"
-        android:paddingTop="10dp">
+        android:scaleType="centerCrop" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="false" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:clickable="false">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:clickable="false"
+            android:fontFamily="sans-serif"
+            android:text="Advertisement"
+            android:textColor="@android:color/white"
+            android:textSize="9sp"
+            android:textStyle="normal" />
+
+        <LinearLayout
+            android:id="@+id/ad_choice_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:clickable="false" />
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:gravity="center_vertical"
+        android:paddingBottom="5dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp">
 
         <ImageView
-            android:id="@+id/native_ad_icon"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_gravity="center_vertical"/>
+            android:id="@+id/iv_ad_logo"
+            android:layout_width="38dp"
+            android:layout_height="38dp" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingLeft="5dp">
-
-            <TextView
-                android:id="@+id/native_ad_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="2"
-                android:textColor="@android:color/black"
-                android:textSize="15sp"/>
-
-            <TextView
-                android:id="@+id/sponsored_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:lines="1"
-                android:text="Sponsored"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="10sp"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/ad_choices_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="right"
-            android:orientation="horizontal"/>
-    </LinearLayout>
-
-    <com.facebook.ads.MediaView
-        android:id="@+id/native_ad_media"
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:gravity="center"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="5dp">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:orientation="vertical"
-            android:paddingRight="10dp">
-
-            <TextView
-                android:id="@+id/native_ad_social_context"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:gravity="center_vertical"
-                android:lines="2"
-                android:paddingRight="5dp"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="10sp"/>
-
-            <TextView
-                android:id="@+id/native_ad_body"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:gravity="center_vertical"
-                android:lines="2"
-                android:textColor="@android:color/black"
-                android:textSize="10sp"/>
-        </LinearLayout>
-
-        <Button
-            android:id="@+id/native_ad_call_to_action"
-            android:layout_width="100dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="14dp"
             android:layout_weight="1"
-            android:background="#4286F4"
-            android:gravity="center"
-            android:paddingLeft="3dp"
-            android:paddingRight="3dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_ad_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-medium"
+                android:textColor="@android:color/white"
+                android:textSize="11.5sp"
+                android:textStyle="normal" />
+
+            <TextView
+                android:id="@+id/tv_ad_desc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:ellipsize="end"
+                android:fontFamily="sans-serif"
+                android:maxLines="2"
+                android:textColor="@android:color/white"
+                android:textSize="10.5sp"
+                android:textStyle="normal" />
+
+        </LinearLayout>
+
+
+        <TextView
+            android:id="@+id/tv_ad_cta"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/darker_gray"
+            android:fontFamily="sans-serif-medium"
+            android:padding="5dp"
+            android:text="Install Now"
             android:textColor="@android:color/white"
-            android:textSize="11sp"/>
+            android:textSize="11sp"
+            android:textStyle="normal" />
+
     </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
