--- a/samples/android/AdsSample/app/src/main/res/layout/fragment_native_ad.xml
+++ b/samples/android/AdsSample/app/src/main/res/layout/fragment_native_ad.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_marginBottom="10dp"
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
@@ -9,7 +9,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <LinearLayout
             android:id="@+id/native_ad_container"
@@ -17,5 +18,12 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" />
     </ScrollView>
+
+
+    <Button
+        android:id="@+id/btn_next_ad"
+        android:layout_width="match_parent"
+        android:text="Next Ad"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
